syntax = "proto2";

message LanguageSetting {
    optional string language = 1;
    optional LanguageOption option = 2;
}

message UserSettings {
    optional string installPath = 1;
    optional string playRegion = 2;
    optional ShortcutOption desktopShortcut = 3;
    optional ShortcutOption startmenuShortcut = 4;
    optional LanguageSettingType languageSettings = 5;
    optional string selectedTextLanguage = 6;
    optional string selectedSpeechLanguage = 7;
    repeated LanguageSetting languages = 8;
    optional string gfx_override_tags = 9;
    optional string versionbranch = 10;
}

message InstallHandshake {
    optional string product = 1;
    optional string uid = 2;
    optional UserSettings settings = 3;
}

message BuildConfig {
    optional string region = 1;
    optional string buildConfig = 2;
}

message BaseProductState {
    optional bool installed = 1;
    optional bool playable = 2;
    optional bool updateComplete = 3;
    optional bool backgroundDownloadAvailable = 4;
    optional bool backgroundDownloadComplete = 5;
    optional string currentVersion = 6;
    optional string currentVersionStr = 7;
    repeated BuildConfig installedBuildConfig = 8;
    repeated BuildConfig backgroundDownloadBuildConfig = 9;
    optional string decryptionKey = 10;
    repeated string completedInstallActions = 11;
}

message BackfillProgress {
    optional double progress = 1;
    optional bool backgrounddownload = 2;
    optional bool paused = 3;
    optional uint64 downloadLimit = 4;
}

message RepairProgress {
    optional double progress = 1;
}

message UpdateProgress {
    optional string lastDiscSetUsed = 1;
    optional double progress = 2;
    optional bool discIgnored = 3;
    optional uint64 totalToDownload = 4 [default = 0];
    optional uint64 downloadRemaining = 5 [default = 0];
}

message CachedProductState {
    optional BaseProductState baseProductState = 1;
    optional BackfillProgress backfillProgress = 2;
    optional RepairProgress repairProgress = 3;
    optional UpdateProgress updateProgress = 4;
}

message ProductOperations {
    optional Operation activeOperation = 1 [default = OP_NONE];
    optional uint64 priority = 2;
}

message ProductInstall {
    optional string uid = 1;
    optional string productCode = 2;
    optional UserSettings settings = 3;
    optional CachedProductState cachedProductState = 4;
    optional ProductOperations productOperations = 5;
}

message ProductConfig {
    optional string productCode = 1;
    optional string metadataHash = 2;
    optional string timestamp = 3;
}

message ActiveProcess {
    optional string processName = 1;
    optional int32 pid = 2;
    repeated string uri = 3;
}

message DownloadSettings {
    optional int32 downloadLimit = 1 [default = -1];
    optional int32 backfillLimit = 2 [default = -1];
}

message Database {
    repeated ProductInstall productInstall = 1;
    repeated InstallHandshake activeInstalls = 2;
    repeated ActiveProcess activeProcesses = 3;
    repeated ProductConfig productConfigs = 4;
    optional DownloadSettings downloadSettings = 5;
}

enum LanguageOption {
    LANGOPTION_NONE = 0;
    LANGOPTION_TEXT = 1;
    LANGOPTION_SPEECH = 2;
    LANGOPTION_TEXT_AND_SPEECH = 3;
}

enum LanguageSettingType {
    LANGSETTING_NONE = 0;
    LANGSETTING_SINGLE = 1;
    LANGSETTING_SIMPLE = 2;
    LANGSETTING_ADVANCED = 3;
}

enum ShortcutOption {
    SHORTCUT_NONE = 0;
    SHORTCUT_USER = 1;
    SHORTCUT_ALL_USERS = 2;
}

enum Operation {
    OP_NONE = -1;
    OP_UPDATE = 0;
    OP_BACKFILL = 1;
    OP_REPAIR = 2;
}
